--- a/views/members/register.html
+++ b/views/members/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,13 +8,47 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="/style/member.css">
+    <style>
+        .sel_register_card {
+            --bs-card-border-color: rgba(0, 0, 0, 0.175);
+            border-radius: 20%;
+            margin-bottom: 1rem;
+        }
+        .sel_register_btn {
+            width: 268px; 
+            height: 268px; 
+            font-weight: 400; 
+            font-size: 30px;
+        }
+        @media screen and (max-width: 768px) {
+            .row {
+                display: block;
+            }
+        }
+    </style>
 </head>
 
 <body class="login-page">
 <div class="login-logo">
     <a href="/"><img src="imgs/aqufarm.png" style="height: 60px; padding: 0.5rem;"></a>
 </div>
-<div class="login-box">
+<div class="row" id="register_box" style="margin: 40px auto 42px;">
+    <div class="col-lg-6 col-md-6 col-sm-12" >
+        <div class="card sel_register_card">
+            <div class="card-body"style="width: 300px; height: 300px;">
+                <button class="btn sel_register_btn" type="button" id="general_btn" onclick="sel_register(this.id)">일반용</button>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12" >
+        <div class="card sel_register_card">
+            <div class="card-body"style="width: 300px; height: 300px;">
+                <button class="btn sel_register_btn" type="button" id="school_btn" onclick="sel_register(this.id)">학교용</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="login-box" id="login_box" style="display: none;">
     <!-- /.login-logo -->
     <div class="card" style="box-shadow: none">
         <div class="card-body login-card-body">
@@ -25,6 +59,7 @@
                             <option selected disabled value="" selected>선택하세요</option>
                             <option value="0">학생</option>
                             <option value="1">교사</option>
+                            <option value="3">일반</option>
                         </select>
                     </div>
                 </div>
@@ -133,5 +168,17 @@
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/duplicate.js"></script>
+<script>
+    function sel_register(id) {
+        if (id =='general_btn') {
+            $("#level option[value='3'").attr('selected', true);
+            $("#level").attr('disabled', true);
+        } else {
+            $("#level option[value='3'").attr('hidden', true);
+        }
+        $("#register_box").hide();
+        $("#login_box").show();
+    }
+</script>
 </body>
 </html>
