--- a/views/student_manage.html
+++ b/views/student_manage.html
@@ -177,28 +177,16 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">학교 검색</h5>
+                    <h5 class="modal-title" id="modal_title">title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <select multiple="multiple" class="multiple-select">
-                        <option value="1">January</option>
-                        <option value="2">February</option>
-                        <option value="3">March</option>
-                        <option value="4">April</option>
-                        <option value="5">May</option>
-                        <option value="6">June</option>
-                        <option value="7">July</option>
-                        <option value="8">August</option>
-                        <option value="9">September</option>
-                        <option value="10">October</option>
-                        <option value="11">November</option>
-                        <option value="12">December</option>
+                <div class="modal-body" id="modal-body">
+                    <select multiple="multiple" class="multiple-select" id="modal-select">
                     </select>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                    <button type="button" class="btn btn-primary">완료</button>
+                    <button type="button" class="btn btn-primary" id="modal_success_btn" onclick="updateDevice(this)">완료</button>
                 </div>
             </div>
         </div>
@@ -211,72 +199,15 @@
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.min.js"></script>
+    <script src="js/range_picker.js"></script>
+    <script src="js/permission_manage.js"></script>
     <script>
-        var tables = null;
-        $( function() { 
-            $("#stdate").daterangepicker({ 
-                autoUpdateInput: false,
-                locale: {
-                    cancelLabel: 'Clear'
-                }
-            }); 
-            
-            $("#stdate").on('apply.daterangepicker', function(ev, picker) {
-                $(this).val(picker.startDate.format('YYYY-MM-DD') + ' ~ ' + picker.endDate.format('YYYY-MM-DD'));
-            });
+        var multiplelist = null;
+        var devices = [];
 
-            $("#stdate").on('cancel.daterangepicker', function(ev, picker) { $(this).val(''); });
-        });
-
-
-        function ap_table() {
-            var datas = [];
-            $.ajax({
-                url: "/members_temp",
-                method: "post",
-                success: function(data) {
-                    $.each(data, (i, v) => {
-                        let level = '';
-                        if (v.level == 0) level = '학생'
-                        else if (v.level == 1) level = '교사'
-                        else if (v.level == 2) level = '관리자'
-                        datas.push([
-                            v.id,
-                            v.school,
-                            level,
-                            v.name,
-                            v.grade,
-                            v.class,
-                            v.number,
-                            dayjs(v.date).format("YYYY-MM-DD"),
-                            `<button type="button" class="btn btn-success" onclick="sign('${v.id}', 0, 1, 1)">승인</button>
-                            <button type="button" class="btn btn-danger" onclick="sign('${v.id}', 1, 1, 2)">거절</button>`
-                        ])
-                        if (data.length - 1 == i) {
-                            console.log(datas)
-                            new DataTable('#ap_tables', 
-                            { 
-                                columnDefs: [
-                                    {
-                                        className: 'dt-head-center',
-                                        targets: "_all",
-                                    },
-                                    {
-                                        className: 'dt-body-center',
-                                        targets: "_all",
-                                    },
-                                ],
-                                scrollX: true, paging: true, destroy: true, data: datas 
-
-                            });
-                        }
-                    })
-                }
-            })
-        }
         function search() {
             $("#card_search").css('display', '');
             var datas = [];
@@ -286,8 +217,8 @@
                 method: "post",
                 data: {
                     school: member[0].school,
-                    level: 0,
-                    userLevel: member[0].level,
+                    level: $("#ulevel").val(),
+                    userLevel: 2,
                     grade: member[0].grade,
                     class: member[0].class,
                     name: $("#name").val(),
@@ -325,12 +256,12 @@
                             v.class,
                             v.number,
                             dayjs(v.date).format("YYYY-MM-DD"),
-                            `<button type="button" class="btn btn-success" onclick="" data-bs-toggle="modal" data-bs-target="#device_modal">권한관리</button>`,
-                            `<button type="button" class="btn btn-success" onclick="" data-bs-toggle="modal" data-bs-target="#device_modal">권한관리</button>`,
+                            `<button type="button" class="btn btn-success" onclick="modal_func('${v.id}', ${v.level})"  id="modal_${v.id}">권한관리</button>`,
+                            `<button type="button" class="btn btn-success" onclick="">권한관리</button>`,
                             `<button type="button" class="btn btn-danger" onclick="sign('${v.id}', 1, 0, 0)">삭제</button>`
                         ])
                         if (data.length - 1 == i) {
-                            table = new DataTable('#tables', 
+                            new DataTable('#tables', 
                             { 
                                 columnDefs: [
                                     {
@@ -344,31 +275,11 @@
                                 ],
                                 scrollX: true, paging: true, destroy: true, data: datas 
                             });
-                            new DualListbox(".multiple-select");
                         }
                     })
                     
                 }
             })
-        }
-
-        function sign(id, bool, table, idx) {
-            let msg = ["회원을 삭제하시겠습니까?", "가입을 승인하시겠습니까?", "가입을 거절하시겠습니끼?"]
-            if (confirm(msg[idx])) {
-                let link = ['suc', 'del']
-                let tables = ['members', 'members_temp']
-                $.ajax({
-                    url: `/${tables[table]}_${link[bool]}`,
-                    method: 'post',
-                    data: {
-                        id: id
-                    },
-                    success: function(msg) {
-                        alert(msg);
-                        location.reload();
-                    }
-                })
-            }
         }
     </script>
 </body>
