--- a/views/members/modify_profile.html
+++ b/views/members/modify_profile.html
@@ -46,7 +46,7 @@
         <nav class="navsidebar">
             <div>
                 <a href="/" class="nav_logo" style="padding-left: 22px;">
-                    <i ><img src="imgs/am_h20.png" width="24px;"></i>
+                    <i ><img src="imgs/am_h20.png" width="30px;"></i>
                     <span class="fas-3 bi_house" style="color: aliceblue;">아쿠팜</span>
                 </a>
                 <div class="nav_list">
@@ -178,6 +178,9 @@
 
                     <!-- /.col -->
                     <div class="mb-3" style="margin-top: 25px;">
+                        <button type="submit" class="btn btn-danger btn-block" id="delete_member" onclick="">회원탈퇴</button>
+                    </div>
+                    <div class="mb-3" style="margin-top: 25px;">
                         <button type="submit" class="btn btn-success btn-block" id="reg">회원정보수정</button>
                     </div>
                 </form>
@@ -208,6 +211,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="/js/duplicate.js"></script>
+    <script src="/js/member_control.js"></script>
     <script>
         const level = ['학생용', '교사용', '관리자']
         var id = null;
@@ -262,6 +266,7 @@
                     $("#reg").attr("type", "button");
                 }
             })
+            $("#delete_member").attr('onclick', `sign('${id}', 1, 0, 0), logout()`);
         })   
     </script>
 </body>
